Added MIT license you gotta love that thing

--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,6 @@
             "Rtablada\\SimpleGuardbuilder": "src/"
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "license": "MIT"
 }
